# Juego-de-los-simpsons

./: CMakeLists.txt  Comida.cpp  Comida.h  Corazon.cpp  Corazon.h  LinkedList.cpp  Puntuaciones.cpp  Puntuaciones.h  README.md  basura.cpp  basura.h  bonus.cpp  bonus.h  homer.cpp  homer.h  main.cpp  maximas.txt
untitled3/: CMakeLists.txt  Comida.cpp  Comida.h  Corazon.cpp  Corazon.h  Puntuaciones.cpp  Puntuaciones.h  homer.cpp  homer.h  main.cpp  maximas.txt
